--- a/genindex.html
+++ b/genindex.html
@@ -12,9 +12,9 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="white" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
   
-    <title>Index | PM-RANK 0.2.20 documentation</title>
-    <meta property="og:title" content="Index | PM-RANK 0.2.20 documentation" />
-    <meta name="twitter:title" content="Index | PM-RANK 0.2.20 documentation" />
+    <title>Index | PM-RANK 0.2.21 documentation</title>
+    <meta property="og:title" content="Index | PM-RANK 0.2.21 documentation" />
+    <meta name="twitter:title" content="Index | PM-RANK 0.2.21 documentation" />
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=e72c8e07" />
       <link rel="stylesheet" type="text/css" href="_static/theme.css?v=42baaae4" />
       <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=4ae1632d" />
@@ -41,7 +41,7 @@
     </a><header
   class="sticky top-0 z-40 w-full border-b shadow-sm border-border supports-backdrop-blur:bg-background/60 bg-background/95 backdrop-blur"><div class="container flex items-center h-14">
     <div class="hidden mr-4 md:flex">
-      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.20 documentation</span>
+      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.21 documentation</span>
       </a></div><button
       class="inline-flex items-center justify-center h-10 px-0 py-2 mr-2 text-base font-medium transition-colors rounded-md hover:text-accent-foreground hover:bg-transparent md:hidden"
       type="button" @click="showSidebar = true">
@@ -107,7 +107,7 @@
   class="fixed inset-y-0 left-0 md:top-14 z-50 md:z-30 bg-background md:bg-transparent transition-all duration-100 -translate-x-full md:translate-x-0 ml-0 p-6 md:p-0 md:-ml-2 md:h-[calc(100vh-3.5rem)] w-5/6 md:w-full shrink-0 overflow-y-auto border-r border-border md:sticky"
   :aria-hidden="!showSidebar" :class="{ 'translate-x-0': showSidebar }">
 
-    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.20 documentation</span>
+    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.21 documentation</span>
     </a>
 
     <div class="relative overflow-hidden md:overflow-auto my-4 md:my-0 h-[calc(100vh-8rem)] md:h-auto">
@@ -142,7 +142,7 @@
 <div class="w-full min-w-0 mx-auto">
 <nav aria-label="breadcrumbs" class="flex items-center mb-4 space-x-1 text-sm text-muted-foreground">
   <a class="overflow-hidden text-ellipsis whitespace-nowrap hover:text-foreground" href="index.html">
-    <span class="hidden md:inline">PM-RANK 0.2.20 documentation</span>
+    <span class="hidden md:inline">PM-RANK 0.2.21 documentation</span>
     <svg aria-label="Home" class="md:hidden" fill="currentColor" height="18" stroke="none" viewbox="0 96 960 960" width="18" xmlns="http://www.w3.org/2000/svg">
       <path d="M240 856h120V616h240v240h120V496L480 316 240 496v360Zm-80 80V456l320-240 320 240v480H520V696h-80v240H160Zm320-350Z"></path>
     </svg>
@@ -213,6 +213,24 @@
   <h2 id="B">B</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.bootstrap_ci_config">bootstrap_ci_config (src.pm_rank.AverageReturn attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/average_return/index.html#src.pm_rank.model.average_return.AverageReturn.bootstrap_ci_config">(src.pm_rank.model.average_return.AverageReturn attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/average_return/index.html#src.pm_rank.model.average_return.AverageReturnConfig.bootstrap_ci_config">(src.pm_rank.model.average_return.AverageReturnConfig attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturn.bootstrap_ci_config">(src.pm_rank.model.AverageReturn attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturnConfig.bootstrap_ci_config">(src.pm_rank.model.AverageReturnConfig attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.BootstrapCIConfig.bootstrap_ci_level">bootstrap_ci_level (src.pm_rank.model.utils.BootstrapCIConfig attribute)</a>
+</li>
+      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.BootstrapCIConfig">BootstrapCIConfig (class in src.pm_rank.model.utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.break_tie_by_uniform">break_tie_by_uniform (src.pm_rank.AverageReturn attribute)</a>
 
       <ul style="list-style-type:none">
@@ -225,8 +243,6 @@
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturnConfig.break_tie_by_uniform">(src.pm_rank.model.AverageReturnConfig attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.BrierScoringRule">BrierScoringRule (class in src.pm_rank)</a>
 
       <ul style="list-style-type:none">
@@ -317,6 +333,8 @@
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturnConfig.default">(src.pm_rank.model.AverageReturnConfig class method)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.DEFAULT_BOOTSTRAP_CI_CONFIG">DEFAULT_BOOTSTRAP_CI_CONFIG (in module src.pm_rank.model.utils)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.MCMCConfig.device">device (src.pm_rank.model.irt.MCMCConfig attribute)</a>
@@ -763,6 +781,8 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.no_odds">(src.pm_rank.ForecastProblem attribute)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.BootstrapCIConfig.num_bootstrap_samples">num_bootstrap_samples (src.pm_rank.model.utils.BootstrapCIConfig attribute)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.num_forecasters">num_forecasters (src.pm_rank.data.base.ForecastChallenge property)</a>
 
       <ul style="list-style-type:none">
@@ -867,8 +887,6 @@
 </li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_idx_to_id">problem_idx_to_id (src.pm_rank.model.irt.IRTObs property)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.problem_option_payoffs">problem_option_payoffs (src.pm_rank.data.base.ForecastChallenge property)</a>
 
       <ul style="list-style-type:none">
@@ -877,6 +895,8 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.problem_option_payoffs">(src.pm_rank.ForecastChallenge property)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.probs">probs (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -899,6 +919,8 @@
         <li><a href="autoapi/src/pm_rank/data/loaders/index.html#src.pm_rank.data.loaders.ProphetArenaChallengeLoader">(class in src.pm_rank.data.loaders)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ProphetArenaForecastEvent">ProphetArenaForecastEvent (class in src.pm_rank.data.base)</a>
+</li>
   </ul></td>
   </tr>
       </table>
@@ -906,6 +928,8 @@
   <h2 id="R">R</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.BootstrapCIConfig.random_seed">random_seed (src.pm_rank.model.utils.BootstrapCIConfig attribute)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.risk_aversion">risk_aversion (src.pm_rank.AverageReturn attribute)</a>
 
       <ul style="list-style-type:none">
@@ -986,8 +1010,6 @@
         <li><a href="autoapi/src/pm_rank/data/base/index.html#module-src.pm_rank.data.base">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li>
     src.pm_rank.data.loaders
 
@@ -995,6 +1017,8 @@
         <li><a href="autoapi/src/pm_rank/data/loaders/index.html#module-src.pm_rank.data.loaders">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li>
     src.pm_rank.data.utils
 
@@ -1060,7 +1084,11 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.stream_problems_over_time">(src.pm_rank.ForecastChallenge method)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ProphetArenaForecastEvent.submission_id">submission_id (src.pm_rank.data.base.ProphetArenaForecastEvent attribute)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.SVIConfig">SVIConfig (class in src.pm_rank.model.irt)</a>
+</li>
+      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.BootstrapCIConfig.symmetric">symmetric (src.pm_rank.model.utils.BootstrapCIConfig attribute)</a>
 </li>
   </ul></td>
   </tr>
@@ -1235,8 +1263,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_probabilities">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.validate_problems">validate_problems() (src.pm_rank.data.base.ForecastChallenge method)</a>
 
       <ul style="list-style-type:none">
@@ -1245,12 +1271,22 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.validate_problems">(src.pm_rank.ForecastChallenge method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.validate_unnormalized_probabilities">validate_unnormalized_probabilities() (src.pm_rank.data.base.ForecastEvent method)</a>
 
       <ul style="list-style-type:none">
         <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.validate_unnormalized_probabilities">(src.pm_rank.data.ForecastEvent method)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_unnormalized_probabilities">(src.pm_rank.ForecastEvent method)</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.validate_weight">validate_weight() (src.pm_rank.data.base.ForecastEvent method)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.validate_weight">(src.pm_rank.data.ForecastEvent method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_weight">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.verbose">verbose (src.pm_rank.AverageReturn attribute)</a>
@@ -1280,6 +1316,14 @@
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.MCMCConfig.warmup_steps">warmup_steps (src.pm_rank.model.irt.MCMCConfig attribute)</a>
 </li>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.weight">weight (src.pm_rank.data.base.ForecastEvent attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.weight">(src.pm_rank.data.ForecastEvent attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.weight">(src.pm_rank.ForecastEvent attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
   </tr>
       </table>
@@ -1304,7 +1348,7 @@
 </footer>
   </div>
   
-    <script src="_static/documentation_options.js?v=20e0ead2"></script>
+    <script src="_static/documentation_options.js?v=84986ecb"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script defer="defer" src="_static/theme.js?v=073f68d9"></script>
