--- a/genindex.html
+++ b/genindex.html
@@ -12,9 +12,9 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="white" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
   
-    <title>Index | PM-RANK 0.2.23 documentation</title>
-    <meta property="og:title" content="Index | PM-RANK 0.2.23 documentation" />
-    <meta name="twitter:title" content="Index | PM-RANK 0.2.23 documentation" />
+    <title>Index | PM-RANK 0.2.24 documentation</title>
+    <meta property="og:title" content="Index | PM-RANK 0.2.24 documentation" />
+    <meta name="twitter:title" content="Index | PM-RANK 0.2.24 documentation" />
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=e72c8e07" />
       <link rel="stylesheet" type="text/css" href="_static/theme.css?v=42baaae4" />
       <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=4ae1632d" />
@@ -41,7 +41,7 @@
     </a><header
   class="sticky top-0 z-40 w-full border-b shadow-sm border-border supports-backdrop-blur:bg-background/60 bg-background/95 backdrop-blur"><div class="container flex items-center h-14">
     <div class="hidden mr-4 md:flex">
-      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.23 documentation</span>
+      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.24 documentation</span>
       </a></div><button
       class="inline-flex items-center justify-center h-10 px-0 py-2 mr-2 text-base font-medium transition-colors rounded-md hover:text-accent-foreground hover:bg-transparent md:hidden"
       type="button" @click="showSidebar = true">
@@ -107,7 +107,7 @@
   class="fixed inset-y-0 left-0 md:top-14 z-50 md:z-30 bg-background md:bg-transparent transition-all duration-100 -translate-x-full md:translate-x-0 ml-0 p-6 md:p-0 md:-ml-2 md:h-[calc(100vh-3.5rem)] w-5/6 md:w-full shrink-0 overflow-y-auto border-r border-border md:sticky"
   :aria-hidden="!showSidebar" :class="{ 'translate-x-0': showSidebar }">
 
-    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.23 documentation</span>
+    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.24 documentation</span>
     </a>
 
     <div class="relative overflow-hidden md:overflow-auto my-4 md:my-0 h-[calc(100vh-8rem)] md:h-auto">
@@ -142,7 +142,7 @@
 <div class="w-full min-w-0 mx-auto">
 <nav aria-label="breadcrumbs" class="flex items-center mb-4 space-x-1 text-sm text-muted-foreground">
   <a class="overflow-hidden text-ellipsis whitespace-nowrap hover:text-foreground" href="index.html">
-    <span class="hidden md:inline">PM-RANK 0.2.23 documentation</span>
+    <span class="hidden md:inline">PM-RANK 0.2.24 documentation</span>
     <svg aria-label="Home" class="md:hidden" fill="currentColor" height="18" stroke="none" viewbox="0 96 960 960" width="18" xmlns="http://www.w3.org/2000/svg">
       <path d="M240 856h120V616h240v240h120V496L480 316 240 496v360Zm-80 80V456l320-240 320 240v480H520V696h-80v240H160Zm320-350Z"></path>
     </svg>
@@ -375,14 +375,6 @@
   <h2 id="F">F</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.fill_problem_with_fair_odds">fill_problem_with_fair_odds() (src.pm_rank.data.base.ForecastChallenge method)</a>
-
-      <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastChallenge.fill_problem_with_fair_odds">(src.pm_rank.data.ForecastChallenge method)</a>
-</li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.fill_problem_with_fair_odds">(src.pm_rank.ForecastChallenge method)</a>
-</li>
-      </ul></li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.fit">fit() (src.pm_rank.AverageReturn method)</a>
 
       <ul style="list-style-type:none">
@@ -437,8 +429,6 @@
         <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.ScoringRule.fit_stream_with_timestamp">(src.pm_rank.model.scoring_rule.ScoringRule method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.forecast_id">forecast_id (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -447,6 +437,8 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.forecast_id">(src.pm_rank.ForecastEvent attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.forecast_problems">forecast_problems (src.pm_rank.data.base.ForecastChallenge attribute)</a>
 
       <ul style="list-style-type:none">
@@ -795,12 +787,12 @@
         <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.BrierScoringRule.negate">(src.pm_rank.model.scoring_rule.BrierScoringRule attribute)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.no_odds">no_odds (src.pm_rank.data.base.ForecastProblem attribute)</a>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.no_odds">no_odds (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.no_odds">(src.pm_rank.data.ForecastProblem attribute)</a>
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.no_odds">(src.pm_rank.data.ForecastEvent attribute)</a>
 </li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.no_odds">(src.pm_rank.ForecastProblem attribute)</a>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.no_odds">(src.pm_rank.ForecastEvent attribute)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.num_bins">num_bins (src.pm_rank.CalibrationMetric attribute)</a>
@@ -860,26 +852,18 @@
   <h2 id="O">O</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.odds">odds (src.pm_rank.data.base.ForecastProblem attribute)</a>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.odds">odds (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.odds">(src.pm_rank.data.ForecastProblem attribute)</a>
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.odds">(src.pm_rank.data.ForecastEvent attribute)</a>
 </li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.odds">(src.pm_rank.ForecastProblem attribute)</a>
-</li>
-      </ul></li>
-      <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.SVIConfig.optimizer">optimizer (src.pm_rank.model.irt.SVIConfig attribute)</a>
-</li>
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.option_payoffs">option_payoffs (src.pm_rank.data.base.ForecastProblem property)</a>
-
-      <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.option_payoffs">(src.pm_rank.data.ForecastProblem property)</a>
-</li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.option_payoffs">(src.pm_rank.ForecastProblem property)</a>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.odds">(src.pm_rank.ForecastEvent attribute)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.SVIConfig.optimizer">optimizer (src.pm_rank.model.irt.SVIConfig attribute)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.options">options (src.pm_rank.data.base.ForecastProblem attribute)</a>
 
       <ul style="list-style-type:none">
@@ -921,20 +905,12 @@
       </ul></li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_id_to_idx">problem_id_to_idx (src.pm_rank.model.irt.IRTObs attribute)</a>
 </li>
-      <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_ids">problem_ids (src.pm_rank.model.irt.IRTObs attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_ids">problem_ids (src.pm_rank.model.irt.IRTObs attribute)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_idx_to_id">problem_idx_to_id (src.pm_rank.model.irt.IRTObs property)</a>
 </li>
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.problem_option_payoffs">problem_option_payoffs (src.pm_rank.data.base.ForecastChallenge property)</a>
-
-      <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastChallenge.problem_option_payoffs">(src.pm_rank.data.ForecastChallenge property)</a>
-</li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.problem_option_payoffs">(src.pm_rank.ForecastChallenge property)</a>
-</li>
-      </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.probs">probs (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -1001,12 +977,12 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.set_unnormalized_probs_default">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.smooth_odds">smooth_odds() (src.pm_rank.data.base.ForecastProblem method)</a>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.smooth_odds">smooth_odds() (src.pm_rank.data.base.ForecastEvent method)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.smooth_odds">(src.pm_rank.data.ForecastProblem method)</a>
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.smooth_odds">(src.pm_rank.data.ForecastEvent method)</a>
 </li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.smooth_odds">(src.pm_rank.ForecastProblem method)</a>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.smooth_odds">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.SMOOTH_ODDS_EPS">SMOOTH_ODDS_EPS (in module src.pm_rank.data.base)</a>
@@ -1300,12 +1276,12 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.validate_forecasts">(src.pm_rank.ForecastProblem method)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.validate_odds">validate_odds() (src.pm_rank.data.base.ForecastProblem method)</a>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.validate_odds">validate_odds() (src.pm_rank.data.base.ForecastEvent method)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.validate_odds">(src.pm_rank.data.ForecastProblem method)</a>
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.validate_odds">(src.pm_rank.data.ForecastEvent method)</a>
 </li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.validate_odds">(src.pm_rank.ForecastProblem method)</a>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_odds">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.validate_probabilities">validate_probabilities() (src.pm_rank.data.base.ForecastEvent method)</a>
@@ -1417,7 +1393,7 @@
 </footer>
   </div>
   
-    <script src="_static/documentation_options.js?v=171860b8"></script>
+    <script src="_static/documentation_options.js?v=dc91f075"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script defer="defer" src="_static/theme.js?v=073f68d9"></script>
