--- a/genindex.html
+++ b/genindex.html
@@ -12,9 +12,9 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="white" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
   
-    <title>Index | PM-RANK 0.2.27 documentation</title>
-    <meta property="og:title" content="Index | PM-RANK 0.2.27 documentation" />
-    <meta name="twitter:title" content="Index | PM-RANK 0.2.27 documentation" />
+    <title>Index | PM-RANK 0.2.28 documentation</title>
+    <meta property="og:title" content="Index | PM-RANK 0.2.28 documentation" />
+    <meta name="twitter:title" content="Index | PM-RANK 0.2.28 documentation" />
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=e72c8e07" />
       <link rel="stylesheet" type="text/css" href="_static/theme.css?v=42baaae4" />
       <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=4ae1632d" />
@@ -41,7 +41,7 @@
     </a><header
   class="sticky top-0 z-40 w-full border-b shadow-sm border-border supports-backdrop-blur:bg-background/60 bg-background/95 backdrop-blur"><div class="container flex items-center h-14">
     <div class="hidden mr-4 md:flex">
-      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.27 documentation</span>
+      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.28 documentation</span>
       </a></div><button
       class="inline-flex items-center justify-center h-10 px-0 py-2 mr-2 text-base font-medium transition-colors rounded-md hover:text-accent-foreground hover:bg-transparent md:hidden"
       type="button" @click="showSidebar = true">
@@ -107,7 +107,7 @@
   class="fixed inset-y-0 left-0 md:top-14 z-50 md:z-30 bg-background md:bg-transparent transition-all duration-100 -translate-x-full md:translate-x-0 ml-0 p-6 md:p-0 md:-ml-2 md:h-[calc(100vh-3.5rem)] w-5/6 md:w-full shrink-0 overflow-y-auto border-r border-border md:sticky"
   :aria-hidden="!showSidebar" :class="{ 'translate-x-0': showSidebar }">
 
-    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.27 documentation</span>
+    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.28 documentation</span>
     </a>
 
     <div class="relative overflow-hidden md:overflow-auto my-4 md:my-0 h-[calc(100vh-8rem)] md:h-auto">
@@ -142,7 +142,7 @@
 <div class="w-full min-w-0 mx-auto">
 <nav aria-label="breadcrumbs" class="flex items-center mb-4 space-x-1 text-sm text-muted-foreground">
   <a class="overflow-hidden text-ellipsis whitespace-nowrap hover:text-foreground" href="index.html">
-    <span class="hidden md:inline">PM-RANK 0.2.27 documentation</span>
+    <span class="hidden md:inline">PM-RANK 0.2.28 documentation</span>
     <svg aria-label="Home" class="md:hidden" fill="currentColor" height="18" stroke="none" viewbox="0 96 960 960" width="18" xmlns="http://www.w3.org/2000/svg">
       <path d="M240 856h120V616h240v240h120V496L480 316 240 496v360Zm-80 80V456l320-240 320 240v480H520V696h-80v240H160Zm320-350Z"></path>
     </svg>
@@ -314,8 +314,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ProphetArenaChallengeLoader.challenge_title">(src.pm_rank.ProphetArenaChallengeLoader attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ChallengeLoader">ChallengeLoader (class in src.pm_rank)</a>
 
       <ul style="list-style-type:none">
@@ -324,6 +322,8 @@
         <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ChallengeLoader">(class in src.pm_rank.data.base)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.LogScoringRule.clip_prob">clip_prob (src.pm_rank.LogScoringRule attribute)</a>
 
       <ul style="list-style-type:none">
@@ -339,6 +339,12 @@
       <li><a href="autoapi/algo/index.html#algo.compute_brier_score">compute_brier_score() (in module algo)</a>
 </li>
       <li><a href="autoapi/algo/index.html#algo.compute_calibration_ece">compute_calibration_ece() (in module algo)</a>
+</li>
+      <li><a href="autoapi/algo/index.html#algo.compute_ranked_average_return">compute_ranked_average_return() (in module algo)</a>
+</li>
+      <li><a href="autoapi/algo/index.html#algo.compute_ranked_brier_score">compute_ranked_brier_score() (in module algo)</a>
+</li>
+      <li><a href="autoapi/algo/index.html#algo.compute_sharpe_ratio">compute_sharpe_ratio() (in module algo)</a>
 </li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.correct_option_idx">correct_option_idx (src.pm_rank.data.base.ForecastProblem attribute)</a>
 
@@ -409,6 +415,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/plot/index.html#plot.event_tickers_df">event_tickers_df (in module plot)</a>
+</li>
       <li><a href="autoapi/data/index.html#data.exponential_weighting">exponential_weighting() (in module data)</a>
 </li>
   </ul></td>
@@ -973,6 +981,8 @@
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.plot">(src.pm_rank.model.CalibrationMetric method)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/plot/index.html#plot.plot_market_versus_forecaster_probs">plot_market_versus_forecaster_probs() (in module plot)</a>
+</li>
       <li><a href="autoapi/plot/index.html#plot.plot_score_over_round">plot_score_over_round() (in module plot)</a>
 </li>
       <li><a href="autoapi/plot_timestamp/index.html#plot_timestamp.plot_score_over_time_bins">plot_score_over_time_bins() (in module plot_timestamp)</a>
@@ -993,8 +1003,6 @@
       <li><a href="autoapi/algo/index.html#algo.predictions_csv">predictions_csv (in module algo)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/plot/index.html#plot.predictions_csv">(in module plot)</a>
-</li>
         <li><a href="autoapi/plot_timestamp/index.html#plot_timestamp.predictions_csv">(in module plot_timestamp)</a>
 </li>
         <li><a href="autoapi/test_algo/index.html#test_algo.predictions_csv">(in module test_algo)</a>
@@ -1562,7 +1570,7 @@
 </footer>
   </div>
   
-    <script src="_static/documentation_options.js?v=eb697a1f"></script>
+    <script src="_static/documentation_options.js?v=0373d9dd"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script defer="defer" src="_static/theme.js?v=073f68d9"></script>
